--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,7 @@ header, footer {
     font-weight: 400;
     font-size: 18px;
     margin: 0px;
+    padding: 10px;
 }
 
 .other_affairs_items .item {
@@ -125,4 +126,82 @@ header, footer {
     margin: 10px;
     font-size: 12px;
     color: #607d8b;
+}
+
+/*============================= 
+        Artist gallery 
+==============================*/
+.gallery_container{
+    text-align: left;
+    padding: 10px;
+}
+.gallery_container h2{
+    font-weight: 400;
+    font-size: 18px;
+    margin: 0px !important;
+}
+.gallery_container .slide_items .image{
+    background-size: cover !important;
+    background-position: center center !important;
+    width: 100%;
+    height: 370px;
+    position: relative;
+}
+.gallery_container .slide_items .image h3{
+    position: absolute;
+    bottom: 0;
+    right:  0;
+    background: #363333b4;
+    padding: 3vw 10px !important;
+    font-weight: 300;
+    color: #e6e6e6;
+
+}
+/*============================= 
+        News Container
+==============================*/
+
+.news_component .tags{
+    background: #f8f8f8;
+    color: #c5c5c5;
+    font-size: 12px; 
+    padding: 10px;
+}
+.news_component .tags span{
+    margin-right: 14px;
+}
+.news_component .tags span i{
+    padding: 7px;
+}
+
+.news_component .top{
+    padding: 10px; 
+    box-sizing: border-box; 
+}
+.news_component .top h2{
+    font-weight: 700;
+    font-size: 30px;
+    margin: 0px;
+    line-height: 40px;
+}
+.news_component .top span{
+    color: #00bcd4;
+    font-weight: 300;
+    font-size: 12px;
+    margin-top: 10px;
+    display: inline-block; 
+}
+
+.news_component .Body_news img{
+    background-size: cover;
+    background-position: center center; 
+    width: 100%;
+}
+.news_component .Body_news p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 20px;
+    font-weight: 500;
+    font-size: 15px;
+    text-align: justify;
 }
